src/objects/Heroku_oAuth_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Call_back_Url_Community__c</fullName>
        <label>Call back Url Community</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Community_Consumer_Key__c</fullName>
        <label>Github Community Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Community_Consumer_Secret__c</fullName>
        <label>Github Community Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Consumer_Key__c</fullName>
        <label>Github Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Consumer_Secret__c</fullName>
        <label>Github Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_URL__c</fullName>
        <label>Github URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Heroku_URL__c</fullName>
        <label>Heroku URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <label>Heroku oAuth Setting</label>
    <pluralLabel>Heroku oAuth Settings</pluralLabel>
</CustomObject>